--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "homepage": "https://github.com/learn-co-curriculum/js-task-lister-project",
   "devDependencies": {
     "learn-browser": "^0.1.12"
+  },
+  "dependencies": {
+    "learn": "^0.1.5"
   }
 }
